--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,8 +40,8 @@ requirements:
 
 test:
   commands:
-    - $PREFIX/bin/emacs --help -nw
-
+    - $PREFIX/bin/emacs --help
+    - $PREFIX/bin/emacsclient --help
     # This test fails on CircleCI because there is no tty.
     - $PREFIX/bin/emacs --kill  # [not linux]
 
