--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,6 +42,9 @@ test:
   commands:
     - $PREFIX/bin/emacs --help
     - $PREFIX/bin/emacsclient --help
+    - $PRERIX/bin/ctags --help
+    - $PRERIX/bin/ebrowse --help
+    - $PREFIX/bin/etags --help
     # This test fails on CircleCI because there is no tty.
     - $PREFIX/bin/emacs --kill  # [not linux]
 
