--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,28 +14,28 @@ source:
   sha1: 983e457971e3e3c8964d039c113033f98132b8a8
 
 build:
-  number: 1
+  number: 2
   skip: true  # [win]
   detect_binary_files_with_prefix: true
 
 requirements:
   build:
     - libxml2
-    - ncurses
+    - ncurses 5.9*
     - dbus  # [osx]
     - jpeg 9*
     - libpng >=1.6.21,<1.7
     - libtiff 4.0.*
-    - giflib
+    - giflib 5.1.*
     - freetype 2.6.*  # [linux]
   run:
     - libxml2
-    - ncurses
+    - ncurses 5.9*
     - dbus  # [osx]
     - jpeg 9*
     - libpng >=1.6.21,<1.7
     - libtiff 4.0.*
-    - giflib
+    - giflib 5.1.*
     - freetype 2.6.*  # [linux]
 
 test:
