--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,7 +46,7 @@ test:
     - $PREFIX/bin/ebrowse --help
     - $PREFIX/bin/etags --help
     # This test fails on CircleCI because there is no tty.
-    - $PREFIX/bin/emacs -nw --kill  # [not linux]
+    - $PREFIX/bin/emacs -nw -Q --kill  # [not linux]
 
 about:
   home: http://www.gnu.org/software/emacs/
