--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,28 @@ install:
       conda info
 
 script:
-  - conda build ./recipe
+  #################################################
+  #              BEGIN CUSTOM CHANGE              #
+  #                                               #
+  # This change needs to stay intact on rerenders #
+  #################################################
+
+  # The build contains hardcoded references to the work directory in the
+  # binary files. To fix this, we make the work directory exactly as long as
+  # the placeholder prefix (255 characters.
+
+  # The prefix ends with '/work/emacs-25.1' (16 characters). We put it in the
+  #  miniconda3 directory, '/Users/travis/miniconda3/' (25 characters), so our
+  # placeholder directory name needs 214 characters.
+
+  - CONDA_BLD_PATH=/Users/travis/miniconda3/placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_plac'
+  # We also need to set --no-build-id to avoid the recipe_1481871472196
+  # subdirectory.
+  - conda build --no-build-id ./recipe
+
+  #################################################
+  #              END CUSTOM CHANGE                #
+  #################################################
 
   - upload_or_check_non_existence ./recipe conda-forge --channel=main
 
