--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
   sha1: 3960d0b64031c645d98aafd4dc9ebf6f6ef4cf50
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win]
   detect_binary_files_with_prefix: true
 
@@ -62,3 +62,5 @@ extra:
   recipe-maintainers:
     - asmeurer
     - msarahan
+    - notestaff
+
