--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,8 +49,7 @@ test:
     - $PREFIX/bin/ebrowse --help
     - $PREFIX/bin/etags --help
     # This test fails on CircleCI because there is no tty.
-    # It also fails on Travis, but I'm not sure why.
-    # - $PREFIX/bin/emacs -nw -Q --kill  # [not linux]
+    - $PREFIX/bin/emacs -nw -Q --kill  # [not linux]
 
 about:
   home: http://www.gnu.org/software/emacs/
