--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,7 @@ requirements:
     - freetype 2.6.*  # [linux]
     - xorg-libxaw  # [linux]
     - zlib
+    - python  # [osx]
   run:
     - libxml2
     - ncurses 5.9*
