--- a/.travis.yml
+++ b/.travis.yml
@@ -61,11 +61,11 @@ script:
   # binary files. To fix this, we make the work directory exactly as long as
   # the placeholder prefix (255 characters).
 
-  # The prefix ends with '/work/emacs-25.2' (16 characters). We put it in the
+  # The prefix ends with '/work/emacs-25.2/nextstep' (25 characters). We put it in the
   #  miniconda3 directory, '/Users/travis/miniconda3/' (25 characters), so our
-  # placeholder directory name needs 214 characters.
+  # placeholder directory name needs 205 characters.
 
-  - export CONDA_BLD_PATH=/Users/travis/miniconda3/placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_plac
+  - export CONDA_BLD_PATH=/Users/travis/miniconda3/placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_placehold_place
   # We also need to set --no-build-id to avoid the recipe_1481871472196
   # subdirectory.
   - conda build --no-build-id ./recipe
