--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -51,7 +51,7 @@ test:
     - $PREFIX/bin/ctags --help
     - $PREFIX/bin/ebrowse --help
     - $PREFIX/bin/etags --help
-    - $PREFIX/bin/emacs -nw -Q --kill < `tty` > `tty`
+    - $PREFIX/bin/emacs -nw -Q --kill --batch
 
 about:
   home: http://www.gnu.org/software/emacs/
