Pin the Python version in the build so it doesn't create a matrix on rerender

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - freetype 2.6.*  # [linux]
     - xorg-libxaw  # [linux]
     - zlib
-    - python  # [osx]
+    - python 3.6.*  # [osx]
   run:
     - libxml2
     - ncurses 5.9*
