--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,12 +28,14 @@ requirements:
     - libpng >=1.6.23,<1.7
     - libtiff 4.0.*
     - giflib 5.1.*
+    - gnutls
     - freetype 2.8.1  # [linux]
     - xorg-libxaw  # [linux]
     - xorg-libxpm  # [linux]
     - xorg-libxfixes  # [linux]
     - zlib 1.2.11
     - python 3.6.*  # [osx]
+
   run:
     - libxml2 2.9.*
     - ncurses 5.9*
@@ -42,6 +44,7 @@ requirements:
     - libpng >=1.6.23,<1.7
     - libtiff 4.0.*
     - giflib 5.1.*
+    - gnutls
     - freetype 2.8.1  # [linux]
     - xorg-libxaw  # [linux]
     - xorg-libxpm  # [linux]
