Run conda smithy update-cb3
List of changes done to the recipe:
Renamed build with host
Removing toolchain in favour of compiler()
Moving pkg-config from host to build
Removing pinnings for libxml2 to use values from conda_build_config.yaml
Removing pinnings for ncurses to use values from conda_build_config.yaml
Removing pinnings for jpeg to use values from conda_build_config.yaml
Removing pinnings for libpng to use values from conda_build_config.yaml
Removing pinnings for libtiff to use values from conda_build_config.yaml
Removing pinnings for giflib to use values from conda_build_config.yaml
Removing pinnings for freetype to use values from conda_build_config.yaml
Removing pinnings for zlib to use values from conda_build_config.yaml
Removing pinnings for python to use values from conda_build_config.yaml
Adding C compiler

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,37 +20,38 @@ build:
 
 requirements:
   build:
-    - toolchain
     - pkg-config
-    - libxml2 2.9.*
-    - ncurses 5.9*
+    - {{ compiler('c') }}
+  host:
+    - libxml2
+    - ncurses
     - dbus  # [osx]
-    - jpeg 9*
-    - libpng >=1.6.23,<1.7
-    - libtiff 4.0.*
-    - giflib 5.1.*
+    - jpeg
+    - libpng
+    - libtiff
+    - giflib
     - gnutls
-    - freetype 2.8.1  # [linux]
+    - freetype        # [linux]
     - xorg-libxaw  # [linux]
     - xorg-libxpm  # [linux]
     - xorg-libxfixes  # [linux]
-    - zlib 1.2.11
-    - python 3.6.*  # [osx]
+    - zlib
+    - python        # [osx]
 
   run:
-    - libxml2 2.9.*
-    - ncurses 5.9*
+    - libxml2
+    - ncurses
     - dbus  # [osx]
-    - jpeg 9*
-    - libpng >=1.6.23,<1.7
-    - libtiff 4.0.*
-    - giflib 5.1.*
+    - jpeg
+    - libpng
+    - libtiff
+    - giflib
     - gnutls
-    - freetype 2.8.1  # [linux]
+    - freetype        # [linux]
     - xorg-libxaw  # [linux]
     - xorg-libxpm  # [linux]
     - xorg-libxfixes  # [linux]
-    - zlib 1.2.11
+    - zlib
 
 test:
   commands:
