Depend on libxft on Linux
This is required for freetype to actually be linked. Should fix several font
issues, such as #26.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,6 +35,7 @@ requirements:
     - xorg-libxaw  # [linux]
     - xorg-libxpm  # [linux]
     - xorg-libxfixes  # [linux]
+    - xorg-libxft  # [linux]
     - zlib
 
   run:
@@ -50,6 +51,7 @@ requirements:
     - xorg-libxaw  # [linux]
     - xorg-libxpm  # [linux]
     - xorg-libxfixes  # [linux]
+    - xorg-libxft  # [linux]
     - zlib
 
 test:
