--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,8 @@ source:
   sha256: 1cf4fc240cd77c25309d15e18593789c8dbfba5c2b44d8f77c886542300fd32c
 
 build:
-  number: 1
+  number: 1  # [not linux]
+  number: 2  # [linux]
   skip: true  # [win]
   detect_binary_files_with_prefix: true
 
