--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,9 +1,13 @@
 c_compiler:
 - toolchain_c
-dbus:
-- '1'
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
+docker_image:
+- condaforge/linux-anvil
 freetype:
-- 2.8.1
+- 2.9.1
 giflib:
 - '5.1'
 jpeg:
@@ -17,10 +21,8 @@ libxml2:
 ncurses:
 - '6.1'
 pin_run_as_build:
-  dbus:
-    max_pin: x
   freetype:
-    max_pin: x.x
+    max_pin: x
   giflib:
     max_pin: x.x
   jpeg:
