--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,17 +1,17 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-build_number_decrement:
-- '1000'
 c_compiler:
-- toolchain_c
+- gcc
+c_compiler_version:
+- '7'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-dbus:
-- '1'
+docker_image:
+- condaforge/linux-anvil-comp7
+freetype:
+- 2.9.1
 giflib:
-- '5.1'
+- 5.1.7
 jpeg:
 - '9'
 libpng:
@@ -20,17 +20,11 @@ libtiff:
 - 4.0.9
 libxml2:
 - '2.9'
-macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
 ncurses:
 - '6.1'
 pin_run_as_build:
-  dbus:
+  freetype:
     max_pin: x
-  giflib:
-    max_pin: x.x
   jpeg:
     max_pin: x
   libpng:
@@ -43,10 +37,5 @@ pin_run_as_build:
     max_pin: x.x
   zlib:
     max_pin: x.x
-zip_keys:
-- - c_compiler
-  - channel_sources
-  - channel_targets
-  - build_number_decrement
 zlib:
 - '1.2'
