Make sure Azure is still enabled for osx builds

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -9,3 +9,4 @@ provider:
   # Azure doesn't allow disabling address space randomization. This can be
   # removed for emacs 27.
   linux: circle
+  osx: azure
