--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,7 +65,7 @@ test:
 
 about:
   home: http://www.gnu.org/software/emacs/
-  license: GPL-3.0
+  license: GPL-3.0-only
   summary: 'GNU Emacs is an extensible, customizable text editor.'
   license_file: COPYING
 
