--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
   sha256: 4d90e6751ad8967822c6e092db07466b9d383ef1653feb2f95c93e7de66d3485
 
 build:
-  number: 3
+  number: 4
   skip: true  # [win]
   detect_binary_files_with_prefix: true
 
@@ -29,6 +29,7 @@ requirements:
     - jpeg
     - libpng
     - libtiff
+    - librsvg
     - giflib
     - gnutls
     - freetype        # [linux]
