MNT: Re-rendered with conda-build 3.19.1, conda-smithy 3.6.15, and conda-forge-pinning 2020.03.24

--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -16,6 +16,8 @@ jpeg:
 - '9'
 libpng:
 - '1.6'
+librsvg:
+- '2'
 libtiff:
 - 4.1.0
 libxml2:
@@ -29,6 +31,8 @@ pin_run_as_build:
     max_pin: x
   libpng:
     max_pin: x.x
+  librsvg:
+    max_pin: x
   libtiff:
     max_pin: x
   libxml2:
