Use GTK toolkit on linux

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,7 +19,7 @@ source:
    - 0006-macos-cross-compile-post-install-pdump-path.patch  # [osx and build_platform != target_platform]
 
 build:
-  number: 3
+  number: 4
   skip: true  # [win]
   detect_binary_files_with_prefix: true
 
@@ -32,6 +32,8 @@ requirements:
     - automake  # [unix]
     - m4  # [unix]
     - make  # [unix]
+    - gtk3  # [unix]
+    - harfbuzz # [unix]
     - libxml2  # [build_platform != target_platform]
     - ncurses  # [build_platform != target_platform]
     - dbus  # [build_platform != target_platform]
@@ -57,10 +59,20 @@ requirements:
     - gmp
     - glib
     - freetype        # [linux]
+    - gtk3         # [linux]
+    - harfbuzz     # [linux]
     - xorg-libxaw  # [linux]
     - xorg-libxpm  # [linux]
     - xorg-libxfixes  # [linux]
     - xorg-libxft  # [linux]
+    - xorg-libxi   # [linux]
+    - xorg-libxrandr # [linux]
+    - xorg-libxcursor # [linux]
+    - xorg-libxcomposite # [linux]
+    - xorg-libxdamage # [linux]
+    - xorg-libxinerama # [linux]
+    - xorg-xineramaproto # [linux]
+    - xorg-libxtst # [linux]    
     - zlib
 
   run:
@@ -75,10 +87,20 @@ requirements:
     - gmp
     - glib
     - freetype        # [linux]
+    - gtk3         # [linux]
+    - harfbuzz     # [linux]
     - xorg-libxaw  # [linux]
     - xorg-libxpm  # [linux]
     - xorg-libxfixes  # [linux]
     - xorg-libxft  # [linux]
+    - xorg-libxi   # [linux]
+    - xorg-libxrandr # [linux]
+    - xorg-libxcursor # [linux]
+    - xorg-libxcomposite # [linux]
+    - xorg-libxdamage # [linux]
+    - xorg-libxinerama # [linux]
+    - xorg-xineramaproto # [linux]
+    - xorg-libxtst # [linux]
     - zlib
 
 test:
