--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,7 +46,7 @@ requirements:
     - gmp  # [build_platform != target_platform]
     - glib  # [build_platform != target_platform]
     - zlib  # [build_platform != target_platform]
-    - tree_sitter
+    - libtree_sitter
   host:
     - libxml2
     - ncurses
@@ -76,7 +76,7 @@ requirements:
     - xorg-xineramaproto  # [linux]
     - xorg-libxtst  # [linux]
     - zlib
-    - tree_sitter
+    - libtree_sitter
 
   run:
     - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
@@ -107,7 +107,7 @@ requirements:
     - xorg-xineramaproto  # [linux]
     - xorg-libxtst  # [linux]
     - zlib
-    - tree_sitter_languages
+    - libtree-sitter
 
 test:
   commands:
