Add a test command to make sure treesit is built correctly
See https://github.com/emacs-mirror/emacs/blob/master/admin/notes/tree-sitter/starter-guide#setting-up-for-adding-major-mode-features

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -119,6 +119,8 @@ test:
     - $PREFIX/bin/etags --help
     - $PREFIX/bin/emacs -nw -Q --kill --batch
     - $PREFIX/bin/emacs -Q --kill --batch
+    # Make sure treesit works
+    - $PREFIX/bin/emacs --batch --eval '(unless (treesit-available-p) (kill-emacs 1))'
 
 about:
   home: http://www.gnu.org/software/emacs/
