--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -79,6 +79,7 @@ requirements:
     - xorg-libxtst  # [linux]
     - zlib
     - libtree-sitter
+    - jansson
 
   run:
     - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
@@ -110,6 +111,7 @@ requirements:
     - xorg-libxtst  # [linux]
     - zlib
     - libtree-sitter
+    - jansson
 
 test:
   commands:
@@ -122,6 +124,8 @@ test:
     - $PREFIX/bin/emacs -Q --kill --batch
     # Make sure treesit works
     - $PREFIX/bin/emacs --batch --eval '(unless (treesit-available-p) (kill-emacs 1))'
+    # Make sure json works
+    - $PREFIX/bin/emacs --batch --eval '(unless (json-available-p) (kill-emacs 1))'
 
 about:
   home: http://www.gnu.org/software/emacs/
