Add jansson as both a build and host requirement

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,6 +49,8 @@ requirements:
     - glib  # [build_platform != target_platform]
     - zlib  # [build_platform != target_platform]
     - libtree-sitter
+    - jansson
+
   host:
     - libxml2
     - ncurses
