Build emacs with native compilation
This is linux-only because conda-forge doesn't have a gcc package for macos.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,6 +50,7 @@ requirements:
     - zlib  # [build_platform != target_platform]
     - libtree-sitter
     - jansson
+    - gcc  # [linux]
 
   host:
     - libxml2
@@ -82,6 +83,7 @@ requirements:
     - zlib
     - libtree-sitter
     - jansson
+    - gcc  # [linux]
 
   run:
     - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
@@ -114,6 +116,7 @@ requirements:
     - zlib
     - libtree-sitter
     - jansson
+    - gcc  # [linux]
 
 test:
   commands:
@@ -128,6 +131,8 @@ test:
     - $PREFIX/bin/emacs --batch --eval '(unless (treesit-available-p) (kill-emacs 1))'
     # Make sure json works
     - $PREFIX/bin/emacs --batch --eval '(unless (json-available-p) (kill-emacs 1))'
+    # Make sure native compilation works
+    - $PREFIX/bin/emacs --batch --eval '(unless (native-comp-available-p) (kill-emacs 1))'  # [linux]
 
 about:
   home: http://www.gnu.org/software/emacs/
