Add Windows build

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -2,3 +2,15 @@ MACOSX_SDK_VERSION:        # [osx and x86_64]
   - "10.13"                # [osx and x86_64]
 c_stdlib_version:   # [linux]
   - "2.17"          # [linux]
+m2w64_c_compiler:                 # [win]
+- gcc                             # [win]
+m2w64_c_compiler_version:         # [win]
+- '14'                            # [win]
+m2w64_cxx_compiler:               # [win]
+- gxx                             # [win]
+m2w64_cxx_compiler_version:       # [win]
+- '14'                            # [win]
+m2w64_c_stdlib:                   # [win]
+  - m2w64-sysroot                 # [win]
+m2w64_c_stdlib_version:           # [win]
+  - 12                            # [win]
