--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -7,7 +7,7 @@ github:
   branch_name: main
   tooling_branch_name: main
 os_version:
-  linux_64: cos7
+  linux_64: alma9
 provider:
   linux: azure
   osx: azure
