--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -10,6 +10,12 @@ c_stdlib:
 - macosx_deployment_target
 c_stdlib_version:
 - '11.0'
+cxx_compiler:
+- clangxx
+cxx_compiler_version:
+- '18'
+libcxx_devel_version:
+- '19'
 channel_sources:
 - conda-forge
 channel_targets:
