--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -1,6 +1,7 @@
 context:
   version: 30.2
   gcc_version: 14.3.0
+  tree_sitter_version: 0.25.*
 
 package:
   name: emacs
@@ -81,7 +82,7 @@ requirements:
         - libpng
         - librsvg
         - libtiff
-        - libtree-sitter
+        - libtree-sitter ${{ tree_sitter_version }}
         - libxml2-devel
         - ncurses
         - zlib
@@ -119,7 +120,7 @@ requirements:
     - libpng
     - librsvg
     - libtiff
-    - libtree-sitter
+    - libtree-sitter ${{ tree_sitter_version }}
     - libxml2-devel
     - ncurses
     - zlib
